# iminmax

./: README.md
data/: Makefile
data/iminmax_team_data/: 2Dimension1cluster100000Points.csv
main_program/: Makefile  main_program.cpp
main_program/readme/: credits.txt  usage.txt
main_program/results/: experiment1_gen_tree_stats.txt  experiment2_gen_tree_stats.txt  experiment3_point_and_knn_stats.txt  experiment4_all_query_stats.txt  experiment5_all_query_stats.txt  experiment6_range_queries_variable_theta.txt  experiment7_all_query_stats_pruning.txt  experiment8_optimal_theta_wide.txt  experiment9_optimal_theta_narrow.txt  experiment_list.txt
main_program/scripts/: gen_tree_stats.sh  parse_range_r.sh  parse_range_uc.sh  parse_theta.sh  query_driver.sh  variable_theta_driver.sh
main_program/test-data/: 2d_points.csv  testfile1.csv
main_program/test-queries/: test_KNN_query_1.csv  test_KNN_query_2.csv  test_point_query_1.csv  (+3 more)
paper/: iminmax_paper.tex  refs.bib
progress-reports/: KNN Extension to iMinMax and Progress Slides.pptx  december7th.pptx  november22.pptx  november30.pptx
stx-btree-0.8.6/: Makefile.am  Makefile.in
stx-btree-0.8.6/testsuite/: BoundTest.cc  DumpRestoreTest.cc  InstantiationTest.cc  IteratorTest.cc  LargeTest.cc  Makefile.am  Makefile.in  RelationTest.cc  SimpleTest.cc  StructureTest.cc  TestRunner.cc  TestTrue.cc
utilities/: data-gen.py
wikis/: Algorithms.md  DataStructures.md  DataStructures.wiki  DifficultiesEncountered.md  Environment.md  Extensions.md  Performance.md  README.md  Results.md  UserInterface.md  Wikis.md
(+124 files in other folders)
